exploring sub libraries of turbojet

--- a/Learning.ipynb
+++ b/Learning.ipynb
@@ -777,6 +777,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! openmdao n2 simple_turbojet.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `Flight Conditions` is class and an element by itself in pycycle. The N2 diagram can be generated for the code.\n",
+    "\n",
+    "### In a usual OpenMDAO style, it has 3 `def` structures with `initialize`, `pyc_setup_output_ports`, and `setup`.\n",
+    "\n",
+    "### In `def` `initialize`, 3 `self.options` are declared. The three options are `composition`, `reactant`, and `mix_ratio_name`.\n",
+    "\n",
+    "### super().initialize() is called. This ensures that the initialization code in superclass is executed before the initialization of code in the current class."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
