epxloring.. at inlet

--- a/Learning.ipynb
+++ b/Learning.ipynb
@@ -794,7 +794,9 @@
     "\n",
     "### In `def` `initialize`, 3 `self.options` are declared. The three options are `composition`, `reactant`, and `mix_ratio_name`.\n",
     "\n",
-    "### super().initialize() is called. This ensures that the initialization code in superclass is executed before the initialization of code in the current class."
+    "### super().initialize() is called. This ensures that the initialization code in superclass is executed before the initialization of code in the current class.\n",
+    "\n",
+    "### In `def` `pyc_setup_output_ports`, 4 `self.options` are declared. The four options are `composition`, `thermo_method`, `thermo_data`,  and `reactant`.\n"
    ]
   },
   {
@@ -827,7 +829,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/h1he2li3/Library/Mobile Documents/com~apple~CloudDocs/Python/pyCycle/pycycle/thermo/static_ps_resid.py:128: RuntimeWarning: invalid value encountered in sqrt\n",
+      "/Users/h1he2li3/Library/Mobile Documents/com~apple~CloudDocs/Python/MS-pycycle/pycycle/thermo/static_ps_resid.py:128: RuntimeWarning: invalid value encountered in sqrt\n",
       "  Vsonic = (i['gamma']*i['R']*i['Ts'])**0.5\n"
      ]
     },
@@ -988,7 +990,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/0q/06xg6g2s27sgyxhntplbnh9w0000gn/T/ipykernel_4423/1874524280.py:120: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "/var/folders/0q/06xg6g2s27sgyxhntplbnh9w0000gn/T/ipykernel_63631/3758272240.py:129: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
       "  print(\" %7.5f  %7.1f %7.3f %7.1f %7.1f %7.1f %7.3f  %7.5f\" %summary_data, file=file, flush=True)\n"
      ]
     },
@@ -997,7 +999,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "time 4.671677827835083\n"
+      "time 4.000793218612671\n"
      ]
     },
     {
