--- a/pycycle/elements/N2.ipynb
+++ b/pycycle/elements/N2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,6 +24,70 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "#### `drhos_dalt` is not present in the code but is being displayed here. Not sure what this is. For now, it is being ignored.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! openmdao n2 flight_conditions.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/h1he2li3/opt/anaconda3/envs/pycycle-2/bin/openmdao\", line 10, in <module>\n",
+      "    sys.exit(openmdao_cmd())\n",
+      "             ^^^^^^^^^^^^^^\n",
+      "  File \"/Users/h1he2li3/opt/anaconda3/envs/pycycle-2/lib/python3.11/site-packages/openmdao/utils/om.py\", line 598, in openmdao_cmd\n",
+      "    options.executor(options, user_args)\n",
+      "  File \"/Users/h1he2li3/opt/anaconda3/envs/pycycle-2/lib/python3.11/site-packages/openmdao/visualization/n2_viewer/n2_viewer.py\", line 745, in _n2_cmd\n",
+      "    _load_and_exec(options.file[0], user_args)\n",
+      "  File \"/Users/h1he2li3/opt/anaconda3/envs/pycycle-2/lib/python3.11/site-packages/openmdao/utils/file_utils.py\", line 196, in _load_and_exec\n",
+      "    exec(code, globals_dict)  # nosec: private, internal use only\n",
+      "    ^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"inlet.py\", line 282, in <module>\n",
+      "    prob.setup()\n",
+      "  File \"/Users/h1he2li3/opt/anaconda3/envs/pycycle-2/lib/python3.11/site-packages/openmdao/core/problem.py\", line 980, in setup\n",
+      "    model._setup(model_comm, mode, self._metadata)\n",
+      "  File \"/Users/h1he2li3/opt/anaconda3/envs/pycycle-2/lib/python3.11/site-packages/openmdao/core/group.py\", line 708, in _setup\n",
+      "    self._setup_procs(self.pathname, comm, mode, self._problem_meta)\n",
+      "  File \"/Users/h1he2li3/opt/anaconda3/envs/pycycle-2/lib/python3.11/site-packages/openmdao/core/group.py\", line 615, in _setup_procs\n",
+      "    subsys._setup_procs(subsys.pathname, sub_comm, mode, prob_meta)\n",
+      "  File \"/Users/h1he2li3/opt/anaconda3/envs/pycycle-2/lib/python3.11/site-packages/openmdao/core/group.py\", line 558, in _setup_procs\n",
+      "    self.setup()\n",
+      "  File \"/Users/h1he2li3/opt/anaconda3/envs/pycycle-2/lib/python3.11/site-packages/pycycle/elements/inlet.py\", line 148, in setup\n",
+      "    composition = self.Fl_I_data['Fl_I']\n",
+      "                  ~~~~~~~~~~~~~~^^^^^^^^\n",
+      "KeyError: 'Fl_I'\n"
+     ]
+    }
+   ],
+   "source": [
+    "! openmdao n2 inlet.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
