going through problem setup part

--- a/Learning.ipynb
+++ b/Learning.ipynb
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -990,7 +990,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/0q/06xg6g2s27sgyxhntplbnh9w0000gn/T/ipykernel_63631/3758272240.py:129: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "/var/folders/0q/06xg6g2s27sgyxhntplbnh9w0000gn/T/ipykernel_12232/2488471592.py:129: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
       "  print(\" %7.5f  %7.1f %7.3f %7.1f %7.1f %7.1f %7.3f  %7.5f\" %summary_data, file=file, flush=True)\n"
      ]
     },
@@ -999,7 +999,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "time 4.000793218612671\n"
+      "time 3.8313472270965576\n"
      ]
     },
     {
@@ -1196,7 +1196,9 @@
     "        # Create design instance of model\n",
     "        self.pyc_add_pnt('DESIGN', Turbojet())\n",
     "\n",
+    "        # Design.Nmech is set at 8070 rpm\n",
     "        self.set_input_defaults('DESIGN.Nmech', 8070.0, units='rpm')\n",
+    "        # MN means Mach Number        \n",
     "        self.set_input_defaults('DESIGN.inlet.MN', 0.60)\n",
     "        self.set_input_defaults('DESIGN.comp.MN', 0.020)#.2\n",
     "        self.set_input_defaults('DESIGN.burner.MN', 0.020)#.2\n",
@@ -1235,11 +1237,11 @@
     "    mp_turbojet = prob.model = MPTurbojet()\n",
     "\n",
     "    # prob.model.set_order(['DESIGN', 'OD0', 'OD1', 'test')\n",
-    "\n",
+    "    # OpenMDAO command to check the problem setup\n",
     "    prob.setup(check=False)\n",
     "\n",
     "    #Define the design point\n",
-    "    prob.set_val('DESIGN.fc.alt', 0, units='ft')\n",
+    "    prob.set_val('DESIGN.fc.alt', 0, units='ft') #Design\n",
     "    prob.set_val('DESIGN.fc.MN', 0.000001)\n",
     "    prob.set_val('DESIGN.balance.Fn_target', 11800.0, units='lbf')\n",
     "    prob.set_val('DESIGN.balance.T4_target', 2370.0, units='degR') \n",
