--- a/Learning.ipynb
+++ b/Learning.ipynb
@@ -1264,7 +1264,7 @@
     "    prob.set_val('DESIGN.balance.T4_target', 2370.0, units='degR') #Target Temperature that shouldn't be exceeded\n",
     "    prob.set_val('DESIGN.comp.PR', 13.5)  #Pressure Ratio in Compressor\n",
     "    prob.set_val('DESIGN.comp.eff', 0.83) #Compressor efficiency\n",
-    "    prob.set_val('DESIGN.turb.eff', 0.86) #Turbine efficiency\n",
+    "    prob.set_val('DESIGN.turb.eff', 0.86) #Turbine efficienc\n",
     "\n",
     "    # Set initial guesses for balances\n",
     "    prob['DESIGN.balance.FAR'] = 0.0175506829934 #Fuel-Air Ratio\n",
@@ -1274,7 +1274,7 @@
     "    prob['DESIGN.fc.balance.Tt'] = 518.665288153\n",
     "\n",
     "    \n",
-    "    # Define the off-design conditions\n",
+    "    # Define the off-design initial conditions\n",
     "    for i,pt in enumerate(mp_turbojet.od_pts):\n",
     "\n",
     "        # initial guesses\n",
