one more step forward. correcting code, docstr, et

--- a/Learning.ipynb
+++ b/Learning.ipynb
@@ -66,7 +66,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# TODO Fix this here"
+   ]
   },
   {
    "cell_type": "code",
@@ -76,6 +78,20 @@
    "source": [
     "# 1 - Trying to understand what is this thermodata and then thermo method"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -801,10 +817,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "! openmdao n2 xdsm-code.py"
+   ]
   },
   {
    "cell_type": "code",
@@ -1038,6 +1056,34 @@
     }
    ],
    "source": [
+    "\"\"\"\n",
+    "    On-Design and Off-Design Cycles for NASA advanced technology high bypass turbofan engine known as N+3 Engine.\n",
+    "    The N+3 cycle is a notional high bypass ratio geared turbofan that could be available in 2030-40 timeframe.\n",
+    "    \n",
+    "    The cycle has advanced features: includes a low pressure ratio fan to enable high bypass ratio,\n",
+    "    which further requires a variable area fan nozzle to maintain fan stability thoroughout the flight envelope.\n",
+    "    \n",
+    "    Baseline design has a overall pressure ratio of 55 with max allowable combustor temperature of 3400 [degR] or 0.56 * 3400 [K],\n",
+    "    and the low pressure turbine is uncooled.\n",
+    "    \n",
+    "    The cycle is modeled as a multi-design point (fancy word is MDP) taht considers four flight conditions simultaneously.\n",
+    "    \n",
+    "    On-design mode is computed around reference flight condition, usually sea-level-static (SLS) and top-of-climb (TOC),\n",
+    "    where the compressor pressure ratios, combustor temperatures and shaft speeds are specified.\n",
+    "    For the current N+3 being studied TOC condition with Mach Number of 0.85 and altitude of 35,000 [ft].\n",
+    "    The on-design mode iwll calculate physica l design vlaues such as flow area,\n",
+    "    compressor and turbine map scalars that are constant for cycle at all operating conditions.\n",
+    "    \n",
+    "    is On-design mode like an extreme case and then the extreme case values are used to set the sizing?\n",
+    "    \n",
+    "    The physical constants from on-design are then fed to off-design calculations.\n",
+    "    \n",
+    "    Need to add information about the on-design mode and off-design modes tested here further.\n",
+    "    \n",
+    "    Ref: Hendricks and Gray 2019\n",
+    "    \"\"\"\n",
+    "\n",
+    "\n",
     "import sys\n",
     "\n",
     "import openmdao.api as om\n",
@@ -1073,7 +1119,12 @@
     "\n",
     "        # Add engine elements\n",
     "        self.add_subsystem('fc', pyc.FlightConditions())\n",
+    "        \n",
+    "        # Withing Inlet, there are few components namely: flow_in (flow_in.py), calc_inlet (within inlet.py), tab ()\n",
+    "        \n",
+    "        # TODO Further explore the inlet component and understand for both design and off-design cases\n",
     "        self.add_subsystem('inlet', pyc.Inlet())\n",
+    "        # TODO Learning compressor connections is a mess. Somehow some of the subsystems listed in code dont appear on N2 diagram.\n",
     "        self.add_subsystem('comp', pyc.Compressor(map_data=pyc.AXI5, map_extrap=True),\n",
     "                                    promotes_inputs=['Nmech'])\n",
     "        self.add_subsystem('burner', pyc.Combustor(fuel_type=FUEL_TYPE))\n",
