--- a/Learning.ipynb
+++ b/Learning.ipynb
@@ -1187,11 +1187,17 @@
     "            self.connect('nozz.Throat:stat:area', 'balance.lhs:W')\n",
     "\n",
     "       \n",
+    "        # Setting up nonlinear Newton solver# \n",
     "        newton = self.nonlinear_solver = om.NewtonSolver()\n",
+    "        # Absolute tolerance is set here\n",
     "        newton.options['atol'] = 1e-6\n",
+    "        # Relative tolerance is set here\n",
     "        newton.options['rtol'] = 1e-6\n",
+    "        # Level of information to be printed by solver. 2 means extensive?\n",
     "        newton.options['iprint'] = 2\n",
+    "        # Maximum iterations is set here\n",
     "        newton.options['maxiter'] = 15\n",
+    "        \n",
     "        newton.options['solve_subsystems'] = True\n",
     "        newton.options['max_sub_solves'] = 100\n",
     "        newton.options['reraise_child_analysiserror'] = False\n",
