added comments to almost all parts of setup

--- a/Learning.ipynb
+++ b/Learning.ipynb
@@ -866,6 +866,64 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fg_0\n",
+      "0.0\n",
+      "lbf\n",
+      "gross thrust from nozzle 0\n",
+      "['Fg_0']\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_nozzles = 1\n",
+    "Fg_vals = []\n",
+    "for i in range(num_nozzles):\n",
+    "    Fg_val_name = 'Fg_{:d}'.format(i)\n",
+    "    \n",
+    "    # Display the generated input name, initial value, units, and description\n",
+    "    print(Fg_val_name)\n",
+    "    print(0.)\n",
+    "    print('lbf')\n",
+    "    print('gross thrust from nozzle {:d}'.format(i)) # Just the description part of input, so don't have to worry about it.\n",
+    "    \n",
+    "    # Add the generated input name to the Fg_vals list\n",
+    "    Fg_vals.append(Fg_val_name)\n",
+    "\n",
+    "print(Fg_vals)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Fg_0']\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_nozzles = 1\n",
+    "Fg_vals = []\n",
+    "for i in range(num_nozzles):\n",
+    "    Fg_val_name = 'Fg_{:d}'.format(i)\n",
+    "    Fg_vals.append(Fg_val_name)\n",
+    "\n",
+    "print(Fg_vals)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
@@ -2040,7 +2098,7 @@
     "                                    promotes_inputs=['Nmech'])\n",
     "        self.add_subsystem('nozz', pyc.Nozzle(nozzType='CD', lossCoef='Cv'))\n",
     "        self.add_subsystem('shaft', pyc.Shaft(num_ports=2),promotes_inputs=['Nmech'])\n",
-    "        self.add_subsystem('perf', pyc.Performance(num_nozzles=1, num_burners=1))\n",
+    "        self.add_subsystem('perf', pyc.Performance(num_nozzles=1, num_burners=1)) # Explicit component with outputs of overall pressure ratio, gross thrust out of all nozzles, and the net thrust of the engine by taking in pressures Pt2 and Pt3 from inlet and compressor elements respectively, \n",
     "\n",
     "        # Connect flow stations\n",
     "        self.pyc_connect_flow('fc.Fl_O', 'inlet.Fl_I', connect_w=False)\n",
@@ -2058,38 +2116,39 @@
     "        self.connect('fc.Fl_O:stat:P', 'nozz.Ps_exhaust')\n",
     "\n",
     "        # Connect outputs to perfomance element\n",
-    "        self.connect('inlet.Fl_O:tot:P', 'perf.Pt2')\n",
-    "        self.connect('comp.Fl_O:tot:P', 'perf.Pt3')\n",
-    "        self.connect('burner.Wfuel', 'perf.Wfuel_0')\n",
-    "        self.connect('inlet.F_ram', 'perf.ram_drag')\n",
-    "        self.connect('nozz.Fg', 'perf.Fg_0')\n",
+    "        self.connect('inlet.Fl_O:tot:P', 'perf.Pt2') #perf takes in the Tot:P or must be Total Pressure of the Fluid at the outlet of the inlet or just before the compressor inlet.\n",
+    "        self.connect('comp.Fl_O:tot:P', 'perf.Pt3') #perf takes in the Tot:P or the Total Pressure of the Fluid at the outlet of the compressor.\n",
+    "        self.connect('burner.Wfuel', 'perf.Wfuel_0') #perf takes in the fuel flow rate value from burner as the Wfuel_val_name's value (W_fuel_0) (in case of 1 nozzle)\n",
+    "        self.connect('inlet.F_ram', 'perf.ram_drag') #perf takes in the ram drag value from inlet component\n",
+    "        self.connect('nozz.Fg', 'perf.Fg_0') #perf takes in the gross thrust value from nozzle as the Fg_val_name's value (Fg_0) (in case of 1 nozzle)\n",
     "\n",
     "        # Add balances for design and off-design\n",
     "        balance = self.add_subsystem('balance', om.BalanceComp())\n",
     "        if design:\n",
-    "\n",
+    "            #rhs_val means target, val means the starting value, lower means the lower bound that solver must try for, upper means the upper bound that solver can go till.\n",
+    "            #Target of solver is to find W that produces target net thrust\n",
     "            balance.add_balance('W', units='lbm/s', eq_units='lbf', rhs_name='Fn_target')\n",
     "            self.connect('balance.W', 'inlet.Fl_I:stat:W')\n",
     "            self.connect('perf.Fn', 'balance.lhs:W')\n",
-    "\n",
+    "            #Target of solver is to change the FAR that produces a target output temperature of turbine.\n",
     "            balance.add_balance('FAR', eq_units='degR', lower=1e-4, val=.017, rhs_name='T4_target')\n",
     "            self.connect('balance.FAR', 'burner.Fl_I:FAR')\n",
     "            self.connect('burner.Fl_O:tot:T', 'balance.lhs:FAR')\n",
-    "\n",
+    "            #To find the Pressure Ratio that results in net shaft power of 0, or in other words turbine produces just enough power to drive the compressor.\n",
     "            balance.add_balance('turb_PR', val=1.5, lower=1.001, upper=8, eq_units='hp', rhs_val=0.)\n",
     "            self.connect('balance.turb_PR', 'turb.PR')\n",
     "            self.connect('shaft.pwr_net', 'balance.lhs:turb_PR')\n",
     "\n",
     "        else:\n",
-    "\n",
+    "            # Target of solver is to change the FAR that produces a target output net thrust\n",
     "            balance.add_balance('FAR', eq_units='lbf', lower=1e-4, val=.3, rhs_name='Fn_target')\n",
     "            self.connect('balance.FAR', 'burner.Fl_I:FAR')\n",
     "            self.connect('perf.Fn', 'balance.lhs:FAR')\n",
-    "\n",
+    "            # Target of solver is to change Nmech to achieve a net shaft power of 0\n",
     "            balance.add_balance('Nmech', val=1.5, units='rpm', lower=500., eq_units='hp', rhs_val=0.)\n",
     "            self.connect('balance.Nmech', 'Nmech')\n",
     "            self.connect('shaft.pwr_net', 'balance.lhs:Nmech')\n",
-    "\n",
+    "            # Target of the solver is to change W until a certain nozzle area is achieved or the limit for nozzle area let's say.\n",
     "            balance.add_balance('W', val=168.0, units='lbm/s', eq_units='inch**2')\n",
     "            self.connect('balance.W', 'inlet.Fl_I:stat:W')\n",
     "            self.connect('nozz.Throat:stat:area', 'balance.lhs:W')\n",
